css/style.css
html {
  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
  font-size: 17px;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.content {
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.picture {
  border-radius: 290486px;
  max-height: 20rem;
  max-width: 20rem;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin-right: 1.5rem;
}

.bio {
  position: relative;
  margin-left: 1.5rem;
}

.position-text {
  font-size: 1.15rem;
  font-weight: 450;
}

/* Description container */
.description {
  width: 90vw;
  max-width: 25rem;
}

.socials {
  display: flex;
  justify-content: center;
  margin-top: -1rem;
}

.socials a {
  margin: 0.5rem;
  
  font-size: 2rem;
  transition-property: opacity, transform;
  will-change: opacity, transform;
  transform: scale(0.75);
  opacity: 0.5;
  color: black;
}

.socials a:hover {
  opacity: 1;
  transform: scale(1);
  color: #0071e3;
}

.socials a:active {
  opacity: 1;
  transform: scale(1);
  color: #0071e3;
}

.button-box {
  display: flex;
}

.button {
  background-clip: border-box;
  background-color: #0071e3;
  border-radius: 980px;
  padding: 8px 16px;
  font-weight: normal;
  color: rgb(255, 255, 255);
  cursor: pointer;
  text-decoration: none;
}

.button:hover {
  background-color: rgb(0, 119, 237);
  color: rgb(255, 255, 255);
}

/* Response layout - makes a one column-layout when display is less than 50px */
@media screen and (max-width: 50rem) {
  .content {
    flex-direction: column;
  }
  
  .picture {
    margin-top: 1.5rem;
    margin-right: 0rem;
  }

  .bio {
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
    margin-left: 0rem;
  }

  .name-text, .position-text, .description-paragraph{
    text-align: center;
  }

  .button-box {
    justify-content: center;
  }

  .social {
    justify-content: center;
    padding-left: 1rem;
  }
}

